# n_puzzle

./: Cargo.toml  Makefile  gen.cpp
map/: 3_0  3_1  4_0  4_1  4_2  4_3  4_4  4_5  5_0  5_1  map.txt
src/: heuristic.rs  init.rs  lib.rs  main.rs  parse.rs
src/puzzle/: mod.rs
