[package]
name = "n_puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
overflow-checks = false
strip = true
codegen-units = 1

[dependencies]
rand = "0.8.4"
rustc-hash = "1.1.0"